@@ -2585,7 +2585,8 @@ DRIVER(f14,p5)          //          03/87 W F-14 Tomcat (P-5)
 DRIVER(f14,l1)          //          05/87 W F-14 Tomcat (L-1)
 DRIVER(fire,l2)         //S11-556:  08/87 W Fire! (L-2)
 DRIVER(fire,l3)         //          08/87 W Fire! (L-3)
-DRIVER(bguns,p1)        //S11-557:  10/87 W Big Guns (P-1)
+DRIVER(bguns,p1)        //S11-557:  10/87 W Big Guns (P-1 Prototype)
+DRIVER(bguns,p1a)       //          10/87 W Big Guns (P-1 Prototype alternate / LG German?)
 DRIVER(bguns,la)        //          10/87 W Big Guns (L-A)
 DRIVER(bguns,lac)       //          07/19 W Big Guns (L-AC Competition MOD) // patch 7472
 DRIVER(bguns,l7)        //          10/87 W Big Guns (L-7)
@@ -2700,6 +2701,7 @@ DRIVER(dd,l2)           //          09/90 B Dr. Dude (LA-2)
 DRIVER(dd,l3c)          //          04/16 B Dr. Dude (LA-3C Competition MOD)
 DRIVER(bbnny,l2)        //S11-209:  12/90 B Bugs Bunny's Birthday Ball (L-2)
 DRIVER(bbnny,lu)        //          12/90 B Bugs Bunny's Birthday Ball (LU-2 Europe)
+DRIVER(bbnny,lg)        //          12/90 B Bugs Bunny's Birthday Ball (LG-2 German)
 //WPC
 DRIVER(dd,p06)          //WPC-2016: 08/90 B Dr. Dude (P-6 WPC)
 DRIVER(dd,p7)           //          09/90 B Dr. Dude (P-7 WPC)
