@@ -111,7 +111,9 @@ Bad Girls (alternate set)
 Baywatch 3.00 (German)
 Beavis and Butt-Head (Class of 1812 MOD)
 Big Game (MOD rev. 12)
+Big Guns (alternate P-1, maybe LG/German?)
 Black Knight L-2
+Bugs Bunny's Birthday Ball LG-2 (German)
 Cue Ball Wizard (older display rev.)
 Dracula (One Ball MOD)
 Elvis 1.00
